<?xml version="1.0"?>
<package format="2">
    <name>rosinterface_handler_tutorial</name>
    <version>0.0.1</version>
    <description>rosinterface_handler_tutorial</description>
    <author email="todo@todo.com">todo</author>
    <maintainer email="todo@todo.com">todo</maintainer>
    <!-- The export tag contains other, unspecified, tags -->

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TBD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rosinterface_handler</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>dynamic_reconfigure</depend>
</package>
